--- a/src/Views/Upgrade.xaml
+++ b/src/Views/Upgrade.xaml
@@ -1,115 +1,112 @@
-<Window x:Class="SourceGit.Views.Upgrade"
-        x:Name="me"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:SourceGit.Views.Controls"
-        mc:Ignorable="d"
-        UseLayoutRounding="True"
-        Title="{StaticResource Text.UpdateAvailable}"
-        WindowStartupLocation="CenterOwner"
-        Height="400" Width="500"
-        ResizeMode="NoResize">
-    <WindowChrome.WindowChrome>
-        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="28" ResizeBorderThickness="1"/>
-    </WindowChrome.WindowChrome>
-
-    <controls:WindowBorder>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="28"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="32"/>
-            </Grid.RowDefinitions>
+<controls:Window 
+    x:Class="SourceGit.Views.Upgrade"
+    x:Name="me"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="clr-namespace:SourceGit.Views.Controls"
+    mc:Ignorable="d"
+    Title="{StaticResource Text.UpdateAvailable}"
+    WindowStartupLocation="CenterOwner"
+    Height="400" Width="500"
+    ResizeMode="NoResize">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="28"/>
+            <RowDefinition Height="1"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="32"/>
+        </Grid.RowDefinitions>
             
-            <!-- Title Bar -->
-            <Grid Grid.Row="0" Background="{StaticResource Brush.TitleBar}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
+        <!-- Title Bar -->
+        <Grid Grid.Row="0" Background="{StaticResource Brush.TitleBar}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
                 
-                <!-- Icon -->
-                <Path Grid.Column="0" Width="16" Height="16" Margin="6,0" Data="{StaticResource Icon.Fetch}"/>
+            <!-- Icon -->
+            <Path Grid.Column="0" Width="16" Height="16" Margin="6,0" Data="{StaticResource Icon.Fetch}"/>
                 
-                <!-- Title -->
-                <TextBlock Grid.Column="1" Text="{StaticResource Text.UpdateAvailable}"/>
+            <!-- Title -->
+            <TextBlock Grid.Column="1" Text="{StaticResource Text.UpdateAvailable}"/>
                 
-                <!-- Close -->
-                <controls:IconButton
-                    Grid.Column="3"
-                    Click="Quit"
-                    Width="28" Padding="8"
-                    Icon="{StaticResource Icon.Close}"
-                    HoverBackground="Red"
-                    WindowChrome.IsHitTestVisibleInChrome="True"/>
-            </Grid>
-            
-            <!-- Body -->
-            <StackPanel Grid.Row="1" Orientation="Vertical" Margin="8,16,8,0">
-                <!-- Title -->
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Path Width="20" Height="20" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
-                    <TextBlock x:Name="txtRelease" Margin="8,0,0,0" FontSize="18" FontWeight="Bold" Text="Release 1.0 Is Out!!!"/>
-                </StackPanel>
-                
-                <!-- Release Info -->
-                <Grid Margin="0,12,0,0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="20"/>
-                        <RowDefinition Height="20"/>
-                        <RowDefinition Height="20"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="120"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="{StaticResource Text.UpdateAvailable.Time}" FontWeight="Bold"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding ElementName=me, Path=Version.PublishTime}"/>
-
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="{StaticResource Text.UpdateAvailable.Based}" FontWeight="Bold"/>
-                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ElementName=me, Path=Version.CommitSHA}"/>
-
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="{StaticResource Text.UpdateAvailable.IsPreRelease}" FontWeight="Bold"/>
-                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding ElementName=me, Path=Version.IsPrerelease}"/>
-                </Grid>
-            </StackPanel>
-
-            <!-- CHANGELOG -->
-            <Border Grid.Row="2" Margin="8" Background="{StaticResource Brush.Contents}" BorderBrush="{StaticResource Brush.Border1}" BorderThickness="1">
-                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <TextBlock
-                        FontSize="10pt"
-                        FontFamily="Consolas"
-                        Padding="8"
-                        VerticalAlignment="Top"
-                        Foreground="{StaticResource Brush.FG2}"
-                        Text="{Binding ElementName=me, Path=Version.Body}"/>
-                </ScrollViewer>
-            </Border>
-            
-            <!-- Options -->
-            <StackPanel Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Horizontal">
-                <Button
-                    Click="Download"
-                    Width="100" Height="24" 
-                    Content="{StaticResource Text.UpdateAvailable.Download}" 
-                    Background="{StaticResource Brush.Accent1}"
-                    BorderBrush="{StaticResource Brush.FG1}"
-                    BorderThickness="1"/>
-
-                <Button
-                    Click="Quit"
-                    Width="100" Height="24"
-                    Margin="8,0,0,0"
-                    Content="{StaticResource Text.Cancel}"/>
-            </StackPanel>
+            <!-- Close -->
+            <controls:IconButton
+                Grid.Column="3"
+                Click="Quit"
+                Width="28" Padding="8"
+                Icon="{StaticResource Icon.Close}"
+                HoverBackground="Red"
+                WindowChrome.IsHitTestVisibleInChrome="True"/>
         </Grid>
-    </controls:WindowBorder>
-</Window>
+
+        <Rectangle Grid.Row="1" Fill="{StaticResource Brush.Border0}" HorizontalAlignment="Stretch" Height="1"/>
+
+        <!-- Body -->
+        <StackPanel Grid.Row="2" Orientation="Vertical" Margin="8,16,8,0">
+            <!-- Title -->
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Path Width="20" Height="20" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
+                <TextBlock x:Name="txtRelease" Margin="8,0,0,0" FontSize="18" FontWeight="Bold" Text="Release 1.0 Is Out!!!"/>
+            </StackPanel>
+                
+            <!-- Release Info -->
+            <Grid Margin="0,12,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="20"/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="120"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="{StaticResource Text.UpdateAvailable.Time}" FontWeight="Bold"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding ElementName=me, Path=Version.PublishTime}"/>
+
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="{StaticResource Text.UpdateAvailable.Based}" FontWeight="Bold"/>
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ElementName=me, Path=Version.CommitSHA}"/>
+
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="{StaticResource Text.UpdateAvailable.IsPreRelease}" FontWeight="Bold"/>
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding ElementName=me, Path=Version.IsPrerelease}"/>
+            </Grid>
+        </StackPanel>
+
+        <!-- CHANGELOG -->
+        <Border Grid.Row="3" Margin="8" Background="{StaticResource Brush.Contents}" BorderBrush="{StaticResource Brush.Border1}" BorderThickness="1">
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <TextBlock
+                    FontSize="10pt"
+                    FontFamily="Consolas"
+                    Padding="8"
+                    VerticalAlignment="Top"
+                    Foreground="{StaticResource Brush.FG2}"
+                    Text="{Binding ElementName=me, Path=Version.Body}"/>
+            </ScrollViewer>
+        </Border>
+            
+        <!-- Options -->
+        <StackPanel Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Horizontal">
+            <Button
+                Click="Download"
+                Width="100" Height="24" 
+                Content="{StaticResource Text.UpdateAvailable.Download}" 
+                Background="{StaticResource Brush.Accent1}"
+                BorderBrush="{StaticResource Brush.FG1}"
+                BorderThickness="1"/>
+
+            <Button
+                Click="Quit"
+                Width="100" Height="24"
+                Margin="8,0,0,0"
+                Content="{StaticResource Text.Cancel}"/>
+        </StackPanel>
+    </Grid>
+</controls:Window>
